fixed cards centring on small devices

--- a/style/main.scss
+++ b/style/main.scss
@@ -173,8 +173,8 @@ html {
 ////////////////////////////////
 .cards {
 	display: grid;
-	grid-template-columns: repeat(1, 2fr);
-	gap: 1rem;
+	grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+	gap: 16px;
 	justify-items: center; /* środek w kolumnie */
 	align-items: center; /* środek w wierszu */
 	max-width: 360px; /* 2 × 150 + gap */
@@ -466,7 +466,7 @@ html {
 		}
 	}
 	.cards {
-		grid-template-columns: 1fr;
+		grid-template-columns: 1fr; 
 		margin: 0 auto;
 	}
 	.timeline {
@@ -518,7 +518,6 @@ html {
 	}
 	.cards {
 		grid-template-columns: 1fr;
-		max-width: 180px;
 		margin: 0 0;
 	}
 	.timeline {
